--- a/bioinformation/2025.01.24_三代SV检测工具的安装.md
+++ b/bioinformation/2025.01.24_三代SV检测工具的安装.md
@@ -1,4 +1,4 @@
-### 三代PacBio HiFi SV检测工具的安装
+### 三代PacBio HiFi SV检测工具 (SVision和PAV) 的安装
 - 这里主要介绍两个安装及运行比较麻烦的两个SVs检测工具，分别是SVision和PAV。
 - 常用的针对PacBio Hifi的软件如有PBSV，CuteSV，Sniffles等，都可以直接用conda安装。
 
